--- a/app/components/SearchForm/SearchForm.module.css
+++ b/app/components/SearchForm/SearchForm.module.css
@@ -1,4 +1,4 @@
-.formItem{
+.formItem {
     margin-bottom: 15px !important;
 }
 
@@ -6,3 +6,10 @@
     color: black !important;
     text-decoration: underline;
 }
+
+.formItem label{
+    color:#678594 !important;
+}
+
+  
+
